--- a/video-app-api/package.json
+++ b/video-app-api/package.json
@@ -10,15 +10,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "envalid": "^7.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.0.3"
+    "express-session": "^1.17.3",
+    "http-errors": "^2.0.0",
+    "mongoose": "^7.0.3",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
+    "@types/http-errors": "^2.0.1",
     "@types/node": "^18.15.9",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.22",
