--- a/video-app-api/tsconfig.json
+++ b/video-app-api/tsconfig.json
@@ -5,6 +5,7 @@
 
     /* Modules */
     "module": "commonjs" /* Specify what module code is generated. */,
+    "typeRoots": ["node_modules/@types", "@types"],
 
     "outDir": "./dist" /* Specify an output folder for all emitted files. */,
     "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
@@ -13,5 +14,8 @@
     /* Type Checking */
     "strict": true /* Enable all strict type-checking options. */,
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
+  },
+  "ts-node": {
+    "files": true
   }
 }
