--- a/video-app-api/package.json
+++ b/video-app-api/package.json
@@ -14,9 +14,9 @@
     "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "envalid": "^7.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "googleapis": "^114.0.0",
     "http-errors": "^2.0.0",
     "mongoose": "^7.0.3",
     "yup": "^1.0.2"
