--- a/video-app-api/package.json
+++ b/video-app-api/package.json
@@ -5,11 +5,13 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+    "start": "nodemon -q dist/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
